# ROS2_Project_Aseembly_Simulation

./: README.md
SAFEROBOTARM CODES/: 2 DOF ROBOT ARM INVERSE  KINEMATICS.py  INVERSE KINEMATICS 6 DOF PERSONAL DEVELOPED.py  INVERSE KINEMATICS 6 DOF ROBOTARM.py  PICK AND PLACE VERSION 1.py  PICK AND PLACE VERSION 2.py  PICK AND PLACE VERSION 3.py  Pick & Place Robot Controller (ROS2) v1.py  ROTATION MATRIX FOR 2-DOF ROBOTARM.py  ROTATION MATRIX FOR 6-DOF ROBOTARM.py  UR5e Inverse Kinematics + 3D Animation.py  test.py
models/Assembly_Station/: model.config  model.sdf
models/Input_Station/: model.config  model.sdf
models/Input_Station/meshes/: Input_Station.stl
models/battery/: model.config  model.sdf
models/battery/meshes/: Bosch_Battery.stl
models/lab_table/: model.config  model.sdf
models/lab_table/meshes/: Table.stl
models/lab_wall/: model.config  model.sdf
models/lab_wall/meshes/: wall.stl
models/motor/: model.config  model.sdf
models/motor/meshes/: Motor_1.stl
ros2_ws/: frames_2026-03-15_16.00.08.gv
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/robot_pick_place_bringup/share/robot_pick_place_bringup/: package.dsv  package.sh  package.xml
ros2_ws/src/install/robot_pick_place_bringup/share/robot_pick_place_bringup/urdf/: ur5e_with_gripper.urdf.xacro
ros2_ws/src/log/: latest_build
ros2_ws/src/robot_pick_place_bringup/: setup.cfg  setup.py
worlds/: workstation_world.sdf
(+30 files in other folders)
