<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_pick_place_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for UR5e in custom workstation world</description>
  <maintainer email="jesvin@todo.todo">jesvin</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
